# suspenders

./: .gitignore  CONTRIBUTING.md  Gemfile  Makefile.am  configure.ac
lib/suspenders/: Makefile.am  app_builder.rb  version.rb.in
lib/suspenders/generators/: app_generator.rb
man/: Makefile.am
spec/features/: new_project_spec.rb
src/: Makefile.am  suspenders  suspenders.in
templates/: Gemfile.erb  factories_spec.rb  rails_helper.rb
test-config/: .travis.yml  Gemfile  README.md
test-config/config/: application.rb  database.yml  environment.rb  newrelic.yml
test-config/config/environments/: development.rb  production.rb  staging.rb  test.rb
test-config/config/initializers/: session_store.rb
